--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
           </div>
           <div class="bg-red-500 p-8 rounded-lg">
             <h4 class="text-3xl">Withdraw</h4>
-            <h2 class="text-5xl">$<span id="Withdraw">00</span></h2>
+            <h2 class="text-5xl">$<span id="Withdraw-total">00</span></h2>
           </div>
           <div class="bg-blue-500 p-8 rounded-lg">
             <h4 class="text-3xl">Blance</h4>
@@ -48,8 +48,8 @@
           </div>
           <div class="bg-violet-600 p-8">
             <h3 class="text-3xl text-white mb-4">Your Withdraw</h3>
-            <input
-              placeholder="Please Enter Your Deposit"
+            <input id="widdraw-fild"
+              placeholder="Please Enter Your Withdraw"
               class="w-3/4 px-2 py-2 rounded-lg block"
             />
             <button
@@ -63,5 +63,6 @@
       </section>
     </main>
     <script src="./js/deposit.js"></script>
+    <script src="./js/widdraw.js"></script>
   </body>
 </html>
